fixed text issues on mobile, added timestamps

--- a/src/components/ErrorPage/ErrorPage.css
+++ b/src/components/ErrorPage/ErrorPage.css
@@ -42,3 +42,9 @@
 .error-button span {
     font-size: 1rem;
 }
+
+@media only screen and (max-width: 425px){
+    .error-page {
+        height: auto;
+    }
+}
