--- a/src/components/PostWithComments/PostWithComments.css
+++ b/src/components/PostWithComments/PostWithComments.css
@@ -22,6 +22,7 @@
     border-left: solid 1px var(--border-color);
     margin-bottom: 3%;
     padding: 1%;
+    word-wrap: break-word;
    
 }
 
@@ -48,16 +49,24 @@
 }
 
 .reply {
-    padding-left: 4%;
+    padding-left: 2%;
     padding-top: 2%;
 }
 
-.show-all-replies {
-    color: #014980;
-    cursor: pointer;
-}
 
-.show-more-replies-arrow {
-    height: 15px;
-    width: 20px;
+
+
+@media only screen and (max-width: 425px){
+    .comments-list {
+        padding-left: 2%;
+    }
+
+    .comments-container {
+        display: block;
+    }
+
+    .loading-comment-text {
+        font-size: 1rem;
+    }
+
 }
